examples/test/testpolicy19431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19431
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key0: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value25
          key26: value4
          key21: value46
      podSelector:
        matchLabels:
          key33: value31
